[project]
python = "^3.12"
name = "eps-FHIR-validator-lambda"

[tool.poetry]
name = "eps-FHIR-validator-lambda"
version = "0.0.1-alpha"
description = "lambda for Validation Service FHIR R4 API Definitions"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-FHIR-validator-lambda"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.3.0"
requests = "^2.33.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[tool.poetry.scripts]
